src/app.css
/* ... */
.timeline.contextual > li .replies[open] summary {
  border-bottom-left-radius: 0;
}
.timeline.contextual > li .replies summary[hidden] {
  display: none;
}
.timeline.contextual > li .replies li {
  position: relative;
}
.timeline.contextual > li .replies li {
  --width: 3px;
  --left: calc(40px + 16px);
  --right: calc(var(--left) + var(--width));
  background-image: linear-gradient(
    to right,
    transparent,
    transparent var(--left),
    var(--comment-line-color) var(--left),
    var(--comment-line-color) var(--right),
    transparent var(--right),
    transparent
  );
  background-repeat: no-repeat;
}
.timeline.contextual > li.thread .replies li {
  --left: calc(50px + 16px + 12px);
}
.timeline.contextual > li .replies li:last-child {
  background-size: 100% 20px;
}
.timeline.contextual > li .replies li:before {
  --radius: 10px;
  --diameter: calc(var(--radius) * 2);
  content: '';
  position: absolute;
  top: 10px;
  left: calc(40px + 16px);
  width: var(--diameter);
  height: var(--diameter);
  border-radius: var(--radius);
  border-style: solid;
  border-width: var(--width);
  border-color: transparent transparent var(--comment-line-color) transparent;
  transform: rotate(45deg);
}
.timeline.contextual > li.thread .replies li:before {
  left: calc(50px + 16px + 12px);
}
.timeline.contextual.loading > li:not(.hero) {
  opacity: 0.5;
  pointer-events: none;
  /* background-image: none !important; */
}
/* .timeline.contextual.loading > li:not(.hero):before {
  content: none !important;
} */

.timeline-deck.compact .status {
  max-height: max(25vh, 160px);
  overflow: hidden;
  mask-image: linear-gradient(
    rgba(0, 0, 0, 1),
    rgba(0, 0, 0, 1) 80%,
    transparent 95%
  );
}
.timeline-deck.compact .status .meta ~ * {
  pointer-events: none;
}

.timeline-header {
  padding: 0 16px;
  opacity: 0.75;
}

.timeline-empty {
  color: var(--text-insignificant-color);
  padding: 0 16px;
  margin-bottom: 3em;
}

.status-loading {
  text-align: center;
  color: var(--text-insignificant-color);
}

.status-link {
  display: block;
  text-decoration-line: none;
  color: inherit;
  transition: background-color 0.2s ease-out;
  -webkit-tap-highlight-color: transparent;
}
.status-link:hover {
  background-color: var(--link-bg-hover-color);
}

.ui-state {
  padding: 16px;
  text-align: center;
}

.deck-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 100%;
  z-index: 1000;
  display: flex;
  background-color: var(--backdrop-color);
}
.deck-backdrop > a {
  flex-grow: 1;
  backdrop-filter: saturate(0.75);
}
@keyframes slide-in {
  0% {
    opacity: 0.5;
    transform: translate3d(100%, 0, 0);
  }
  100% {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}
.deck-backdrop .deck {
  width: 40em;
  max-width: 100vw;
  background-color: var(--bg-color);
  animation: slide-in 0.5s var(--timing-function);
  box-shadow: -1px 0 var(--bg-color);
}
.deck-backdrop .deck .status {
  max-width: 40em;
}

.decks {
  flex-grow: 1;
  transition: transform 0.5s var(--timing-function);
}

.deck-close {
  color: var(--text-insignificant-color) !important;
}
.deck-close:hover {
  color: var(--text-color) !important;
}

:is(button, .button).plain.has-badge:after {
  content: '';
  display: inline-block;
  position: absolute;
  right: 10px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  background-color: var(--link-color);
  opacity: 0.5;
}

@keyframes fade-from-top {
  0% {
    transform: translate(-50%, -100%);
    opacity: 0;
  }
  100% {
    transform: translate(-50%, 0);
    opacity: 1;
  }
}
.updates-button {
  position: absolute;
  animation: fade-from-top 2s ease-out;
  left: 50%;
  transform: translate(-50%, 0);
  font-size: 90%;
  background: linear-gradient(
    to bottom,
    var(--button-bg-blur-color),
    var(--button-bg-color)
  );
  backdrop-filter: blur(16px);
  box-shadow: 0 3px 8px -1px var(--bg-faded-blur-color),
    0 10px 36px -4px var(--button-bg-blur-color);
}
.updates-button .icon {
  vertical-align: top;
}

/* BOX */

.box {
  width: 40em;
  max-width: 100vw;
  padding: 16px;
}

/* CAROUSEL */
/* use snap, center children, max width viewport */

.carousel {
  display: flex;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  /* scroll-behavior: smooth; */
  scrollbar-width: none;
  overscroll-behavior: contain;
}
.carousel::-webkit-scrollbar {
  display: none;
}
.carousel > * {
  scroll-snap-align: center;
  scroll-snap-stop: always;
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  height: 100dvh;
}
.carousel > * :is(img, video) {
  width: auto;
  max-width: 100vw;
  height: auto;
  max-height: 100vh;
  max-height: 100dvh;
}
.carousel > * video {
  min-height: 80px;
}

.carousel-top-controls {
  top: 0;
  top: env(safe-area-inset-top, 0);
}
.carousel-controls {
  bottom: 0;
  bottom: env(safe-area-inset-bottom, 0);
}
:is(.carousel-top-controls, .carousel-controls) {
  position: fixed;
  left: 0;
  left: env(safe-area-inset-left, 0);
  right: 0;
  right: env(safe-area-inset-right, 0);
  padding: 16px;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  text-align: center;
  pointer-events: none;
}

button.carousel-button,
button.carousel-dot {
  pointer-events: auto;
  font-weight: bold;
}
button.carousel-button[hidden] {
  display: inline-block;
  opacity: 0;
  pointer-events: none;
}
.carousel-dots {
  border-radius: 999px;
  backdrop-filter: blur(12px) invert(0.25) brightness(1.5);
}
@media (prefers-color-scheme: dark) {
  .carousel-dots {
    backdrop-filter: blur(12px) brightness(0.5);
  }
}
button.carousel-dot {
  color: var(--text-insignificant-color) !important;
  font-weight: bold;
  backdrop-filter: none !important;
}
button.carousel-dot:hover,
button.carousel-dot.active,
button.carousel-dot[disabled].active {
  color: var(--link-color) !important;
}
/* ... */

